@@ -1,3 +1,8 @@
+2004-03-16  James Ogley <james@usr-local-bin.org>
+
+	* service.pl.in, time-conf.in: added support for SuSE 9.0 for the
+	  time tool
+
 2004-03-16  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* network-conf.in, network.pl.in: added slackware 9.1 ppp support
